# devil

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README  annotated.html  askcfg.c  askcfg.h  askcfg_8c.html  askcfg_8h.html  askcfg_8h_source.html  calctxt.c  calctxt.h  calctxt_8c.html  calctxt_8h.html  calctxt_8h_source.html  classes.html  click.c  click.h  click_8c.html  click_8h.html  click_8h_source.html  config.c  config.h  config_8c.html  config_8h.html  config_8h_source.html  convtabl.h  convtabl_8h.html  convtabl_8h_source.html  credits.h  credits_8h.html  credits_8h_source.html  descdefs.h  descdefs_8h.html  descdefs_8h_source.html  devil.c  devil_8c.html  devilx.ini  dir_5b518823a74a1ddd7aa7bb04c8694c36.html  (+441 more)
misc/: uncrustify.cfg
search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6a.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_79.html  all_7a.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_68.html  classes_69.html  classes_6b.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_6f.html  classes_70.html  classes_72.html  (+111 more)
t/: Makefile  test_linux_config.c
wins/: CMakeLists.txt  Makefile  linux.c  makefile  w_draw.c  w_draw.h  w_event.c  w_event.h  w_init.c  w_init.h  w_list.c  w_list.h  w_system.c  w_system.h  w_test.c  w_tools.c  w_tools.h  wi_buts.c  wi_buts.h  wins.h  (+7 more)
(+8 files in other folders)
